Updated travis setup; now uses uploadtool instead of travis2hithub.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ jdk:
 before_install:
 - sudo add-apt-repository ppa:dns/gnu -y
 - sudo apt-get update -qq
-install:
-- sudo apt-get install -y --force-yes python-requests
 script:
 - mvn install -DskipTests=true -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -V
-- tools/travis2github.py target/*.zip
+- tools/upload.sh target/*.zip
+branches:
+  except:
+    - # Do not build tags that we create when we upload to GitHub Releases
+    - /^(?i:ci-build)$/
