--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,19 @@
                                 </fileMapper>
                             </fileMappers>
                         </transformationSet>
+                        <transformationSet>
+                            <dir>src/main/resources</dir>
+                            <outputDir>${project.build.directory}</outputDir>
+                            <includes>
+                                <include>IrpProtocols.xml</include>
+                            </includes>
+                            <stylesheet>src/main/resources/IrpProtocols2md.xsl</stylesheet>
+                            <fileMappers>
+                                <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
+                                    <targetExtension>.md</targetExtension>
+                                </fileMapper>
+                            </fileMappers>
+                        </transformationSet>
                     </transformationSets>
                     <catalogs>
                         <catalog>../harctoolboxbundle/schemas/catalog.xml</catalog>
