--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ sudo: required
 notifications:
 email: false
 language: java
-jdk:
-- oraclejdk8
-before_install:
-- sudo add-apt-repository ppa:dns/gnu -y
-- sudo apt-get update -qq
+#jdk:
+#- oraclejdk8
+#before_install:
+#- sudo add-apt-repository ppa:dns/gnu -y
+#- sudo apt-get update -qq
 script:
 - mvn install -DskipTests=true -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -V
 - tools/upload.sh target/*.zip
