Include a copy of ../harctoolboxbundle/schema (for now). Adjusted catalog in pom.xml. Cf. #101.

--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
                         </transformationSet>
                     </transformationSets>
                     <catalogs>
-                        <catalog>../harctoolboxbundle/schemas/catalog.xml</catalog>
+                        <catalog>${project.build.directory}/../schemas/catalog.xml</catalog>
                     </catalogs>
                 </configuration>
 
