Fixed generation and packaging of IrpTransmogrifier.html.

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
                             </fileMappers>
                         </transformationSet>
                         <transformationSet>
+                            <xincludeAware>true</xincludeAware>
                             <dir>src/main/xdocs</dir>
                             <outputDir>${project.build.directory}/generated-documents</outputDir>
                             <includes>
