Remove schemas/* and entity/*; cf #101.

--- a/pom.xml
+++ b/pom.xml
@@ -118,9 +118,11 @@
                             </fileMappers>
                         </transformationSet>
                     </transformationSets>
-                    <catalogs>
-                        <catalog>schemas/catalog.xml</catalog>
-                    </catalogs>
+
+                    <!-- Uncomment to use local versions of the schemas/DTDs -->
+                    <!--catalogs>
+                        <catalog>../schemas/catalog.xml</catalog>
+                    </catalogs-->
                 </configuration>
 
                 <dependencies>
