new Makefile tool: tag. target gh-pages now pushes-

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -45,11 +45,17 @@ gh-pages: target/site/apidocs
 	( cd ${GH_PAGES} ; \
 	cp -rf ../target/site/apidocs/* . ; \
 	git add * ; \
-	git commit -a -m "Update of API documentation" )
-	echo Now perform \"git push\" from ${GH_PAGES}
+	git commit -a -m "Update of API documentation" ; \
+	git push )
 
 $(INSTALLDIR):
 	mkdir -p $@
+
+tag:
+	git checkout master
+	git status
+	git tag -a Version-$(VERSION) -m "Tagging Version-$(VERSION)"
+	git push origin Version-$(VERSION)
 
 # Only for Unix-like systems
 install: $(IRP_TRANSMOGRIFIER_BIN) | $(INSTALLDIR)
