--- a/pom.xml
+++ b/pom.xml
@@ -377,13 +377,18 @@
             <groupId>org.antlr</groupId>
             <artifactId>antlr4</artifactId>
             <version>4.7.2</version>
-            <type>jar</type>
             <exclusions>
                 <exclusion>
-                    <!-- Reduces the size of the jar-with-dependencies from 14MiB to 2.6MiB.
-                    wish I know why it is needed... -->
                     <groupId>com.ibm.icu</groupId>
                     <artifactId>icu4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish</groupId>
+                    <artifactId>javax.json</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.abego.treelayout</groupId>
+                    <artifactId>org.abego.treelayout.core</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
