Refactored much of the Decoder stuff. Implemented predicates for prefer-overs. Resolves #134. Adjusted prefer-overs in IrpProtocols.xml to be compatible with the past.

--- a/src/test/teaserfiles/Makefile
+++ b/src/test/teaserfiles/Makefile
@@ -1,4 +1,4 @@
-IRPTRANSMOGRIFIER := ../../../tools/irptransmogrifier
+IRPTRANSMOGRIFIER := ../../../tools/irptransmogrifier --quiet
 ICTPARSE := ../../../contributed/input-filters/ict.sh
 DIFF := diff -w
 
