Checksums as with IrScrutinizer. Resolves #169.

--- a/pom.xml
+++ b/pom.xml
@@ -359,32 +359,27 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>net.nicoulaj.maven.plugins</groupId>
-                <artifactId>checksum-maven-plugin</artifactId>
-                <version>1.8</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
                 <executions>
+                    <!-- compute checksums -->
+                    <!-- I know the checksum-maven-plugin, but it does not do what I want) -->
                     <execution>
+                        <id>mk-checksums</id>
+                        <phase>install</phase>
                         <goals>
-                            <goal>files</goal>
+                            <goal>exec</goal>
                         </goals>
+                        <configuration>
+                            <executable>${basedir}/tools/mkchecksums.sh</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                            <arguments>
+                                <argument>${project.artifactId}-${project.version}-bin.zip</argument>
+                            </arguments>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <algorithms>
-                        <algorithm>MD5</algorithm>
-                        <algorithm>SHA-1</algorithm>
-                        <algorithm>SHA-512</algorithm>
-                    </algorithms>
-                    <fileSets>
-                        <fileSet>
-                            <directory>${project.build.directory}</directory>
-                            <includes>
-                                <include>*.zip</include>
-                                <!--include>*.jar</include-->
-                            </includes>
-                        </fileSet>
-                    </fileSets>
-                </configuration>
             </plugin>
         </plugins>
     </build>
