--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ language: java
 #- sudo apt-get update -qq
 script:
 - mvn install -DskipTests=true -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -V
-- tools/upload.sh target/*.zip target/*.zip.md5 target/*.zip.sha*
+- ls -l --si target
+- tools/upload.sh target/*.zip target/*.md5 target/*.sha*
 branches:
   except:
     - # Do not build tags that we create when we upload to GitHub Releases
